# master

./: test.txt
FaceSDKTest/: CMakeLists.txt  config.ini  log.txt  loop.bat  report.txt  test.bat  test.py
FaceSDKTest/Data/ISCalFaceInfoPath/faceInfoM/: 1.rec  1000.rec  102.rec  103.rec  104.rec  106.rec  108.rec  (+646 more)
FaceSDKTest/Doc/: 人脸识别算法SDK测试平台使用说明文档.docx  人脸识别算法SDK测试平台项目概要设计文档.docx
FaceSDKTest/Images/fea/: 1.fea  10.fea  106.fea  116.fea  12.fea  120.fea  126.fea  136.fea  150.fea  151.fea  163.fea  183.fea  186.fea  196.fea  2.fea  20.fea  201.fea  206.fea  214.fea  225.fea  239.fea  244.fea  245.fea  247.fea  263.fea  281.fea  284.fea  298.fea  299.fea  3.fea  308.fea  310.fea  342.fea  355.fea  364.fea  376.fea  383.fea  392.fea  395.fea  396.fea  (+83 more)
FaceSDKTest/Images/pca/: 1000.pca  101.pca  104.pca  107.pca  119.pca  122.pca  126.pca  136.pca  137.pca  138.pca  151.pca  163.pca  165.pca  176.pca  184.pca  190.pca  193.pca  198.pca  217.pca  228.pca  230.pca  241.pca  244.pca  247.pca  250.pca  266.pca  267.pca  282.pca  283.pca  288.pca  315.pca  326.pca  332.pca  335.pca  346.pca  358.pca  36.pca  363.pca  364.pca  383.pca  (+84 more)
FaceSDKTest/SDKTest/: CompareImp.h  ProgressBar.cpp  SDKTest.cpp  stdafx.cpp
FaceSDKTest/Source/: .cproject  .project  copy.cpp  test.cpp
FaceSDKTest/Source/include/: common.h  face_sdk.h  log_format.h  testSuits.h
FaceSDKTest/Source/src/: common.cpp  ftAppliance.cpp  ftDetect.cpp  ftError.cpp  ftFeature.cpp  ftISCompare.cpp  ftISCompareMN.cpp  ftISDetTrack.cpp  ftISFeature.cpp  ftInterface.cpp  ftMultiThread.cpp  ftVersion.cpp
(+7882 files in other folders)
